--- a/style.css
+++ b/style.css
@@ -26,11 +26,6 @@ html {
   color: #000;
 }
 
-.content {
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-}
 .content img {
   margin-right: 10px;
 }
@@ -58,6 +53,7 @@ html {
   border-radius: 10%;
 }
 /*end navbar*/
+
 /*start home*/
 .home .container {
   background: #f4f6f5;
@@ -66,9 +62,6 @@ html {
   max-width: 1150px;
   width: 100%;
   gap: 0px;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
 }
 .home .container .row .content h1 {
   font-size: 5rem;
@@ -80,7 +73,9 @@ html {
   font-size: 1.2rem;
   margin: 10px 0;
   color: #666;
+  width: 300px;
 }
+
 .home .container .row .content h1 span {
   background-color: #ebd96b !important;
   font-size: 4rem;
@@ -90,11 +85,7 @@ html {
   padding-left: 20px;
   padding-right: 70px;
 }
-.home .content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
+
 .home .container img {
   width: 100%;
   height: 100vh;
@@ -102,9 +93,9 @@ html {
 .btn-main {
   background-color: #000 !important;
   color: white !important;
-  width: 25%;
   margin: 0 20px;
   padding: 20px;
+  width: 400px;
 }
 .box img {
   margin-top: 40px;
@@ -127,7 +118,6 @@ html {
 
 /*end title*/
 /*start cards*/
-
 .card {
   border: none;
   border-radius: 10px;
@@ -176,7 +166,7 @@ html {
 }
 /*end cards*/
 /*star payday*/
-.mena {
+.mena-container {
   background: linear-gradient(
     1.32deg,
     #e0c340 0.13%,
@@ -200,6 +190,9 @@ html {
     #fae157 91.52%,
     #f9df56 97.87%
   );
+  align-items: center;
+  display: flex;
+  border-radius: 30px;
 }
 .photo img {
   max-width: 100%;
@@ -302,8 +295,57 @@ html {
 }
 .vnvn-color {
   color: #000;
+  padding-top: 7px;
 }
 /*end Young’s Favourite*/
+/**/
+
+.card-body {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.card-text {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.card-mmnn {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0;
+  padding-top: 50%;
+}
+
+.card-mmnn img {
+  max-width: 80%;
+  display: flex;
+  justify-content: center;
+
+  padding-top: 90%;
+  margin-right: 100px;
+  padding-right: 30px;
+}
+
+.card-mnmn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-mnmn img {
+  max-width: 80%;
+  border-radius: 10px;
+}
 
 /* download start */
 
@@ -340,6 +382,23 @@ html {
   }
   .download-box {
     text-align: center;
+  }
+  .home .container img {
+    display: none;
+  }
+
+  .description p {
+    width: 100%;
+    font-size: 25px !important;
+    text-align: center;
+    margin: 50px 0 !important;
+  }
+
+  .description .btn {
+    display: inline-block;
+    width: 210%;
+    text-align: center;
+    margin: 0 auto;
   }
 }
 
